// Vitest Snapshot v1

exports[`fixtures:basic > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "id": "index",
      },
      "tag": "h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`fixtures:basic > navigation > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "children": [
      {
        "path": "/cats",
        "title": "Cats list",
      },
      {
        "path": "/cats/persian",
        "title": "Persian",
      },
      {
        "path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "path": "/cats",
    "title": "Cats list",
  },
]
`;

exports[`fixtures:basic > navigation > Get dogs navigation > basic-navigation-dogs 1`] = `
[
  {
    "children": [
      {
        "path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "path": "/dogs",
    "title": "Dogs List",
  },
]
`;

exports[`fixtures:basic > navigation > Get navigation > basic-navigation 1`] = `
[
  {
    "children": [
      {
        "path": "/cats",
        "title": "Cats list",
      },
      {
        "path": "/cats/persian",
        "title": "Persian",
      },
      {
        "path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "path": "/cats",
    "title": "Cats list",
  },
  {
    "children": [
      {
        "path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "path": "/dogs",
    "title": "Dogs List",
  },
  {
    "children": [
      {
        "path": "/",
        "title": "سلام",
      },
    ],
    "path": "/",
    "title": "سلام",
  },
  {
    "children": [
      {
        "path": "/",
        "title": "Index",
      },
    ],
    "path": "/",
    "title": "Index",
  },
]
`;
